--- a/notes/2020-08-09-083721.md
+++ b/notes/2020-08-09-083721.md
@@ -1,4 +1,3 @@
 # 阅读 Gallium: Automated Software Middlebox Offloading to Programmable Switches
 
-> 论文阅读 / Li Jialin / NUS / CS6101
-
+> 论文阅读 / Li Jialin / NUS / CS6101 / SIGCOMM20
