add notes about 6.NULL and deep learning crash

--- a/notes/2020-08-09-085023.md
+++ b/notes/2020-08-09-085023.md
@@ -1,3 +1,7 @@
 # 阅读 ClickOS and the Art of Network Function Virtualization
 
 > 论文阅读 / Li Jialin / NUS / CS6101 / NSDI14
+
+NIC: [Network Interface Controller](https://en.wikipedia.org/wiki/Network_interface_controller)
+
+相关: The click modular router
