add NLP in Python

--- a/notes/2020-08-09-093600.md
+++ b/notes/2020-08-09-093600.md
@@ -68,5 +68,48 @@ broot 比tree更好用的查看目录，还有nnn
 
 ```
 
- 
+## Lecture 3
 
+- Vim模式
+  - normal -i-> insert 
+  - insert -esc-> normal
+  - replace (r)
+  - selection 
+    - visual line
+    - visual block
+  - command line (column)
+
+- Vim命令
+  - :sp 分割
+  - :q 关闭一个tab
+  - :qa 关闭全部
+- Vim操作
+  - jkhl
+  - b和w移动一个word
+  - 0 $ 开始和结束的行
+  - ^ 第一个非空白字符
+  - ctrl D ctrl U 上下
+  - G到底，gg到顶
+  - f【字母】 找到某个字母
+  - F【字母】往前找到某个字母
+  - o，在该行下方开新行
+  - dw 删除一个word
+  - u 撤销
+  - de删除单词结尾
+  - ce修改单词结尾
+  - dd删除整行
+  - cc ?
+  - x 删除那个字符
+  - r【字符】替换一个字符
+  - y copy
+  - yy copy当前行
+  - p粘贴
+  - yw复制单词
+  - 在Visual mode选择文本
+  - 8j 向下移动8行
+  - di( 删除括号内的东西
+  - da( 删除包括括号在内的东西
+  - / 【单词】 搜索单词
+  - ci' 修改单括号内的东西
+- tmux
+- ~/.vimrc 配置
