--- a/notes/2020-08-10-063537.md
+++ b/notes/2020-08-10-063537.md
@@ -3,3 +3,65 @@
 > NLP / Python / Youtube
 
 https://www.youtube.com/watch?v=xvqsFTUsOmc
+
+## Sentiment Analysis
+
+## Topic Modeling
+
+## Text Generation
+
+## NLP in Python
+
+- Programming
+  - pandas, sklearn, re, nltk, TextBlob, gensim& Stats
+- Math 
+  - corpus, document-term matrix, world counts, sentiment analysis, topic modeling, text generation
+- Communication
+  - scope, visualize, extract insights
+
+## Workflow
+
+- Start a question
+- get & clean the data
+- perform EDA (exploratory data analysis is an approach to analyzing data sets to summarize their main characteristics, often with visual methods)
+- apply techniques
+- share insights
+
+
+
+- data gathering
+  - requests, beautiful soup,
+  - save python data: Pickle (Serialize Python Objects)
+- data cleaning
+  - remove stop words
+  - lower case
+  - remove punctuation, numerical
+  - tokenize
+  - after tokenize:
+    - stemming
+    - part of speech tagging
+    - create bi-grams
+    - deal with typos
+  - output
+    - Corpus (pandas dataframe)
+    - document-term matrix (sklearn.feature_extraction.text.CountVectorizer)
+      - 在jupyter notebook中shift+tab查看函数介绍
+- EDA
+  - 输入Corpus/document-term matrix
+  - 一些方式
+    - top words
+    - vocabulary
+    - Amount of profanity
+- NLP Techniques
+  - 需要corpus (单词顺序是需要的)
+  - Sentiment Analysis (情感分析)
+    - TextBlob Sentiment (on top of nltk)
+    - Polarity（-1~1）积极还是消极
+    - Subjectivity（0~1）是否主观
+  - topic modeling
+    - 需要document term matrix, number of topics, number of iterations
+    - gensim (Latent Dirichlet Allocation(LDA))
+    - 输出: top words in each topic
+  - Text Generation
+    - Markov Chains
+
