add Computer Systems security and 6.NULL

--- a/notes/2020-08-09-093600.md
+++ b/notes/2020-08-09-093600.md
@@ -2,6 +2,8 @@
 
 > b站 / MIT公开课 / CS工具
 
+https://missing.csail.mit.edu/
+
 ## Lecture 1
 
 反斜杠可转义空格
@@ -113,3 +115,71 @@ broot 比tree更好用的查看目录，还有nnn
   - ci' 修改单括号内的东西
 - tmux
 - ~/.vimrc 配置
+
+## Lecture 4 (data wrangling)
+
+查一下ssh直接执行远程命令
+
+查一下less (是一个pager程序，分页可滚动)
+
+查一下sed命令
+
+- sed 's/搜索正则/替换正则/'  （进行替换）
+  - 默认每行替换一次
+  - 在最后+g，表示替换所有（每行也替换多次）
+  -  echo 'abcaba' | sed -E 's/(ab)*//g'
+  - -E 表示使用现代正则语法
+  - ^和$ match整行的开始和结束
+  - \1   \2 表示capture group
+- regular expressions 101 在线调试期
+- wc -l 计算行数
+- sort 排序
+- uniq -c 只显示不重复的行，打印个数
+- awk 每行按column处理文本，可以匹配，逻辑判断。可以print啥的，可以有变量
+- paste 查查干嘛的
+  - paste -sd+ 可以自动弄成一行，中间加+
+- xxx | xargs COMMAND 将前面的输出作为COMMAND的参数
+- 管道不只能传文本
+
+
+
+## Lecture 5 Command line environment
+
+- to learn
+  - Job control
+  - Terminal Multiplexers
+  - Dot files
+  - Remote machines
+- man signal 查看所有signal
+  - python程序可以import signal, signal.signal来定义handler。
+    - 比如定义Ctrl+C的SIGINT
+  - SIGKILL不能被handle
+  - ctrl+Z suspend
+  - jobs命令
+  - bg %1
+  - kill -STOP %1
+  - kill -HUP %1
+- tmux
+  - concepts
+    - sessions: have windows
+    - windows: have panes
+    - panes
+  - tmux new -t footbar
+  - tmux ls
+  - ctrl+A+prev/next
+  - ctrl+A+% 水平分屏
+  - ctrl+A+space
+  - 远程服务器很有用（即使ssh会话终止,tmux还在运行）
+- alias命令
+  - alias xx="yyyyy" 设置xx为"yyyyy"
+  - alias xx 查询xx是什么
+- dotfiles (通常是configuration files)
+- dotfiles.github.io/utilities
+- symlink
+  - ln -s xxx yyy
+- ssh可以直接跟要在远程执行的命令
+- scp复制文件
+  - scp 本地文件 用户@远程地址:远程文件
+- 类似工具rsync，和scp一样可以复制，不过支持断点续传
+- 如果tmux套娃，本地tmux链接远程tmux，使用不同的快捷键。
+
