6.NULL lec6, systems security

--- a/notes/2020-08-09-093600.md
+++ b/notes/2020-08-09-093600.md
@@ -183,3 +183,110 @@ broot 比tree更好用的查看目录，还有nnn
 - 类似工具rsync，和scp一样可以复制，不过支持断点续传
 - 如果tmux套娃，本地tmux链接远程tmux，使用不同的快捷键。
 
+## Lecture 6 version control (git)
+
+文件夹叫tree，文件叫blob。
+
+git历史是有向无环图。
+
+- 可以分支可以merge
+
+- 每个commit有author, message
+
+- type blob = array \<byte\>
+
+- type tree = map \<string, tree | blob\>
+
+- type commit = struct E {
+    parents: array\<commit\>, 
+    author: string, 
+    message: string, 
+    snapshot: tree}
+
+- type object = blob | tree | commit
+
+- objects = map\<string, object\>
+
+- ```
+  def store(o)
+  	id = sha1(o) //hash
+  	object[id] = o
+  def load(id)
+  	return object[id]
+  	
+  为了可读性，
+  references = map <string, string>
+  给某个commit加可读名称
+  ```
+
+- ````
+  git init 初始化
+  git help init
+  git status
+  
+  git有staging area (下次commit包含什么)
+  git add 文件
+  git commit 打开编辑器
+  git log 查看扁平历史
+  git log --all --graph --decorate 查看树历史，还可以加--oneline参数，显示更紧密
+  git cat-file -p 哈希    可以查看内部如何保存
+  
+  git commit -a 提交所有之前跟踪过的文件
+  git checkout 哈希   将working directory改变到哪个状态（head指针）
+  git checkout 文件   把某个文件恢复到head里的版本
+  
+  master是最新的commit的可读名称，git log可以看到
+  git diff 文件 （将文件与head比较）
+  git diff 哈希 文件（将文件与指定commit中的比较）
+  git diff 哈希1 哈希2 文件
+   
+  git branch 列出所有
+  git branch -vv 更多信息
+  git branch 名称   创建branch
+  git checkout branch名称  切换head的分支
+  切换到master分支，git merge 分支名
+  
+  如果提示fastforward，意思是没创建新的commit
+  如果conflict，可以配置git mergetool命令，也可以直接打开文件解决冲突。
+  
+  git add 冲突文件
+  git merge --continue 
+  
+  git remote 列出所有的remote
+  git remote add <name> <url> name通常是origin
+  git push <remote> <local branch>:<remote branch>
+  可以关联分支，不用每次输入对应分支
+  git branch --set-upstream-to=origin/master
+  直接git push即可
+  
+  git fetch
+  
+  git pull可以理解为git fetch + git merge
+  也可能会显示fast forward
+  
+  git clone <url> <foldername>
+  
+  git clone --shallow
+  ````
+
+- ```
+  git config
+  vim ~/.gitconfig 也可以
+  ```
+
+  ```
+  git add -p 文件，手动确认文件中的每一处是否提交
+  ```
+
+- ```
+  git blame 查看每一行啥时候谁提交的
+  git stash 暂存，恢复到head
+  git stash pop 恢复
+  git bisect 二分查找（比如结合unit test，找出unit test停止的第一个commit）
+  ```
+
+- ```
+  .gitignore文件
+  ```
+
+- 可以和shell结合，再shell上就显示git status
