MIT System security, add privilege seperation, linux containers

--- a/notes/2020-08-13-044944.md
+++ b/notes/2020-08-13-044944.md
@@ -226,3 +226,130 @@ Bugs in web services
 
 Plan B: tolerate bugs
 
+- provilege seperation
+
+  - benefits:
+    - limits the damage of an attack (least privilege)
+    - limits access to buggy code (reduces attack surface)
+  - challenges:
+    - what is the seperation plan?
+    - how to isolate?
+    - how to share?
+    - maintain performance?
+
+- seperation plan, a real example
+
+  - divide website into services
+
+  - services (assumptions: face end users, buggy):
+
+    - login, matching, msg, photos, profile editor
+    - services get tokens from okld, token is used to issue RPC
+
+  - have a dbproxy, talk to db (assumptions: written by experienced programmers)
+
+    - avoid SQL things in services, dbproxy accept RPC calls.
+    - construct SQL queries, 
+    - access control
+
+  - OKD: handle all http requests
+
+  - OKLD: listen on 80
+
+  - Logger: servies can write, OKLD can write, etc.
+
+  - | service   | harm             | surface                   |
+    | --------- | ---------------- | ------------------------- |
+    | OKld      | big              | narrow                    |
+    | OKD       | http traffic     | first line of HTTP        |
+    | OKlogd    | trash the log    | logging RPC               |
+    | service i | data used by svc | partial data, limited RPC |
+
+  - Discussion
+
+    - Separation by service
+    - where should attacker focus
+      - service, OS
+
+- Isolation mechanisms
+
+  - physical machines
+  - virtual machines
+  - processes
+    - creates new process, allocate UID (not correspond to UNIX users), setuid, chroot(dir)
+  - containers
+    - own file system
+    - own ip address
+    - like virtual machine, but using UNIX process mechanism
+
+## Recitation 1: Linux Containers
+
+- Privilege Seperation
+
+  - Least Privilege (LP)
+  - Seperation of duties (SoD)
+
+- Implementation: Technical Controls
+
+  - DAC: *nix permissions and facl
+  - LP: seccomp, capabilities
+  - isolation: hwvirt, chroot, namespaces, lxc
+
+- container: one hardware, one kernel, multiple userland; virtual machine: one hardware, multiple kernels/OSs.
+
+  - running container is a set of processes.
+  - namespaces;
+  - Cgroups: Isolate processes; limit resource usage.
+  - capabilities
+  - seccomp-ppf
+
+- Linux namespaces
+
+  - logically isolate kernel elements
+  - namespaces:
+    - PID
+    - UTS {hostname, domainname}
+    - Network
+    - Cgroup
+    - IPC (ipc call)
+    - User
+    - Mount
+  - clone call
+    - child_pid = int clone(..., CLONE_NEWUTS, .....)
+    - set_ns(2)
+    - unshare(2)
+    - ...
+
+- cgroups
+
+  - limit hardware resources
+
+- Capabilities 
+
+  - enforce namespaces and reduce undesired privileges
+  - getcap, setcap
+
+- Secure Computing (seccomp-bpf)
+
+  - filter kernel syscalls
+
+- LXC, docker .... many container techniques.
+
+- lxc:
+
+  - man lxc.container.conf
+
+  - communication between containers or host:
+
+    - network bridge
+
+    - kernel have a feature: net builder
+
+      - iptables: 
+
+      - | tables                                             | chains                                                       | targets                      |
+        | -------------------------------------------------- | ------------------------------------------------------------ | ---------------------------- |
+        | raw<br />security<br />filter<br />mangle<br />nat | input<br />output<br />forward<br />prerouting<br />postrouting | accept<br />reject<br />drop |
+
+  
+
