6.NULL debugging profiling, Security software isolation

--- a/notes/2020-08-09-093600.md
+++ b/notes/2020-08-09-093600.md
@@ -290,3 +290,56 @@ git历史是有向无环图。
   ```
 
 - 可以和shell结合，再shell上就显示git status
+
+## Lecture 7 Debugging and Profiling
+
+- 用不同重要层级的logging, 容易filter, 可以用不同颜色
+- linux logs通常在 /var/log
+  - lnav 一个查看log的工具
+  - journalctl 读取log工具
+  - logger 消息    # 将消息记录到system log
+- python -m ipdb xxx.py   调试python
+  - l    list code
+  - s   step
+  - c    continue
+  - p 变量名      打印变量名
+  - q    退出
+  - b 行号      断点
+  - p locals()      打印所有local变量
+- gdb   (low level)
+- strace
+  - sudo strace ls -l > /dev/null
+    - 查看ls -l的所有system call
+- 静态分析
+  - python
+    - pyflakes 文件名   比如检查redefinition, undefined vars
+    - mypy 文件名
+    - 这些工具能和editor集成
+  - 英语检查writegood   2333
+- timing
+  - real time, user time, system time
+  - 直接用time命令，就可查看上述3个
+- profilers
+  - tracing / sampling
+  - python有-m cProfile
+  - python -m cProfile -s tottime xxx.py | tac
+    - tac将输出反转
+  - line profiling
+    - 很多语言支持，python的做法是给函数加@profile装饰器
+    - 然后用kernprof -l -v xxx.py
+  - memory profiling
+    - python -m memory_profiler xxx.py
+    - C用Valgri
+  - 查看page fault，指令数，跳转数等
+    - sudo perf stat 命令
+    - sudo perf record 命令
+  - 可视化
+    - 火焰图，call graph (例如python call graph)
+- 实时查看状态
+  - htop
+- 文件大小
+  - du -h .
+  - ncdu .   可以navigate
+  - LSOF    查看list of open files
+- benchmark
+  - hyperfine，统计一个命令的平均执行时间等
