--- a/notes/2020-08-13-044944.md
+++ b/notes/2020-08-13-044944.md
@@ -351,5 +351,106 @@ Plan B: tolerate bugs
         | -------------------------------------------------- | ------------------------------------------------------------ | ---------------------------- |
         | raw<br />security<br />filter<br />mangle<br />nat | input<br />output<br />forward<br />prerouting<br />postrouting | accept<br />reject<br />drop |
 
-  
+## Lecture 6: Software Isolation
 
+little/no hw/os support
+
+contain suspect / untrusted code
+
+use sandboxing
+
+- keep bad code inside sandbox
+
+Software Isolation
+
+- Language specific (javascript)
+
+  - javascript interpreter
+
+- Language independent
+
+  - x86 instructions
+  - Chrome used to support native client(NaCl), but no longer, bacause WebAssembly is comming.
+
+- NaCl
+
+  - broswer
+    ![image-20200816152950089](2020-08-13-044944.assets/image-20200816152950089.png)
+
+  - Sandboxing goals
+
+    - don't execute disallowed instructions
+      - INT instruction
+      - RET instruction
+      - load DDT etc
+    - don't write memory outside of the box (trampoline means蹦床)
+      ![image-20200816153501710](2020-08-13-044944.assets/image-20200816153501710.png)
+
+  - validator
+
+    - safe instructions: allow (such as add)
+    - sometime safe: instrument
+    - unsafe: disallow
+
+  - challenges
+
+    - variable-length instructions (x86 specific)
+    - guarding ld/st/jump arguments
+    - entering / exiting a module
+      - module ask RTS (runtime system) do do things for it
+      - runtime system is also sandboxed (outer sandbox, OS provided, backup protection, syscall limited)
+
+  - Ex Decoding
+
+    - x86: instruction boundry matters
+
+      - should never jump into middle of instructions
+
+    - solution: reliable dissambly
+
+      - phase 1: build target table with all address of instructions
+
+      - phase 2: look through all jmp
+
+        - jmp fixed address solved
+
+        - computed jmp ?
+
+          - get help from compiler and validator
+
+          - ```
+            jump %eax 
+            ==> 
+            AND $0xFFFFFFE0, %eax
+            jmp %eax     (address is aligned to multiple of 32)
+            ```
+
+          - used in: virtual method calls in C++
+
+          - so put targets @32-byte-aligned address
+
+            - if instruction cross 32-byte-aligned address, fill with no-op.
+
+      - return is turned into jmp.
+
+  - guarding ld/st/jmp (need to avoid writing / jumping RTS)
+
+    - 64bit x86: instruments a bit more
+    - 32bit x86: segmentation
+      - segement registers %CS %DS %SS
+        - directly use hardware to check segment bound.
+    - call runtime:  jump to trampoline code (32bit aligned longjump code)
+    - what if user write tranpoline code to jump to any place in RTS?
+      - code section is readonly
+    - RTS return: call tranpoline, using spring board to jump back to module
+      - 32-bit+1instr aligned, first instruction is halt 
+      - RTS can jump to instruction after halt
+      - module can only halt if jump to spring board.
+
+  - Summary
+
+    - software isolation, is possible, NaCl is a clever design.
+
+## Lecture 7: Enclaves
+
+Intel SGX Software Guard Extensions
