Computer Seccurity add enslave

--- a/notes/2020-08-13-044944.md
+++ b/notes/2020-08-13-044944.md
@@ -454,3 +454,92 @@ Software Isolation
 ## Lecture 7: Enclaves
 
 Intel SGX Software Guard Extensions
+
+Isolation, Strong threat model, cutting edge tech
+
+Tradition:
+
+- OS process
+  ![image-20200816222631280](2020-08-13-044944.assets/image-20200816222631280.png)
+
+Enclave goal
+
+- compromized OS, cannot provide isolation anymore
+  - user / operator
+  - physics attacks
+  - malware
+  - bugs in OS
+- keep seccrets(important data), not availability(running)
+- Abstraction
+  - Isolation
+  - attestation (证明，证据)
+    - kernel is able to start enclaves
+    - what is actually running, is the right enclave running?
+    - ![image-20200816223742263](2020-08-13-044944.assets/image-20200816223742263.png)
+
+- prior approaches about compromised OS
+  - TPM / secure boot: check what kernel boots
+  - Seperate CPU
+    - Apple, Android phones, 
+      - unlocking devices, checking pin, cryptographic keys, etc.
+    - cost, not flexible
+    - hypervisors / VMs
+- Enclaves: SGX, Komodo
+  - ![image-20200816225056870](2020-08-13-044944.assets/image-20200816225056870.png)
+  - SGX的monitor是在CPU里的，无需安装软件
+  - Komodo: use ARM Trust Zone, monitor not in CPU, so have bootloader
+  - Isolated memory
+    - CPU可以控制kernel的访问，但是NIC/GPU等可以DMA
+    - 在移动端独立mem是常见的，嵌入式很容易设计各种special硬件，但x86都是标准化的。
+    - DMA capable devices如今有iommu可以配置page table
+    - SGX的做法是CPU可以加密解密
+  - Execution modes
+    - ![image-20200816232754069](2020-08-13-044944.assets/image-20200816232754069.png)
+  - attestation
+    - ![image-20200817001117054](2020-08-13-044944.assets/image-20200817001117054.png)
+  - monitor:
+    - pages: 4KB of mem
+    - PageDB, page type:
+      - Unused 
+      - AddressSpace
+      - Thread
+      - L1 PT
+      - L2 PT
+      - Data
+      - Spare
+    - kernel->mon: create enclave
+      - initAS(aspg, l1pt)
+      - InitL2(sdpg, l2pt, idx)
+      - mapSecure(aspg, cdatapg, v, content)
+      - InitThread(aspg, threadpg, entry)
+      - Finalize()
+      - Enter(thread)
+
+## Lecture 8: Mobile device security
+
+generally better than desktop security
+
+Enclave support
+
+- Threat model
+  - attacker steals phone + want to read data
+
+  - Assumptions: phone locked, password protected
+
+- Why care?
+
+  - customers who must keep secrets
+  - ordinary customers
+  - competitive adv.
+  - Try to do the right thing
+
+- Potential attacks
+
+  - exhaustive pw search
+  - Impersonating fingerprints
+  - removing flash chips
+  - bugs in kernel, bugs in driver sw.
+  - secure boot 
+
+- hardware overview
+
