6.NULL add build ci

--- a/notes/2020-08-09-093600.md
+++ b/notes/2020-08-09-093600.md
@@ -343,3 +343,35 @@ git历史是有向无环图。
   - LSOF    查看list of open files
 - benchmark
   - hyperfine，统计一个命令的平均执行时间等
+
+## Lecture 8: Metaprogramming
+
+Build systems
+
+makefile:
+
+```makefile
+paper.odf: paper.tex plot-data.png
+	pdflatex paper.tex
+
+plot-%.png: %.dat plot.py
+	./plot.py -i $*.dat -o $@
+```
+
+semantic versioning:
+
+- major.minor.patch
+  - major: backward incompatible change
+  - minor: backward compatible
+  - patch: no functional change 
+-  lock file (lock dependencies)
+  - faster rebuild
+  - reproducible rebuild
+- vendor (copy into self project)
+- continuous intergration
+  - event triggered action
+- dependabot (can be found on github)
+- github pages (CI, use Jekyll automatically build the website)
+- 如果makefile太大了，可能有更好的工具
+- makefile可以作为顶层胶水，画图，测试，调用其他build tool, etc
+
