modify readme, add mobile device security

--- a/notes/2020-08-13-044944.md
+++ b/notes/2020-08-13-044944.md
@@ -192,7 +192,7 @@ youtube地址 https://www.youtube.com/watch?v=x6QsaB2aSmU&list=PLA6Ht2dJt3SKN3z4
 
   - buffer overflow是在overflow prev和next指针
 
-    ![image-20200814223631264](2020-08-13-044944.assets/image-20200814223631264.png)
+    - ![image-20200814223631264](2020-08-13-044944.assets/image-20200814223631264.png)
 
   - 可以让b->n->p=b->p，b->p->n=b->n
 
@@ -375,66 +375,67 @@ Software Isolation
 - NaCl
 
   - broswer
-    ![image-20200816152950089](2020-08-13-044944.assets/image-20200816152950089.png)
-
-  - Sandboxing goals
-
+    
+- ![image-20200816152950089](2020-08-13-044944.assets/image-20200816152950089.png)
+    
+- Sandboxing goals
+  
     - don't execute disallowed instructions
       - INT instruction
       - RET instruction
       - load DDT etc
     - don't write memory outside of the box (trampoline means蹦床)
-      ![image-20200816153501710](2020-08-13-044944.assets/image-20200816153501710.png)
-
-  - validator
-
+  - ![image-20200816153501710](2020-08-13-044944.assets/image-20200816153501710.png)
+  
+- validator
+  
     - safe instructions: allow (such as add)
     - sometime safe: instrument
-    - unsafe: disallow
-
-  - challenges
-
+  - unsafe: disallow
+  
+- challenges
+  
     - variable-length instructions (x86 specific)
     - guarding ld/st/jump arguments
     - entering / exiting a module
       - module ask RTS (runtime system) do do things for it
-      - runtime system is also sandboxed (outer sandbox, OS provided, backup protection, syscall limited)
-
-  - Ex Decoding
-
-    - x86: instruction boundry matters
-
-      - should never jump into middle of instructions
-
-    - solution: reliable dissambly
-
-      - phase 1: build target table with all address of instructions
-
-      - phase 2: look through all jmp
-
-        - jmp fixed address solved
-
-        - computed jmp ?
-
-          - get help from compiler and validator
-
+    - runtime system is also sandboxed (outer sandbox, OS provided, backup protection, syscall limited)
+  
+- Ex Decoding
+  
+  - x86: instruction boundry matters
+  
+    - should never jump into middle of instructions
+  
+  - solution: reliable dissambly
+  
+    - phase 1: build target table with all address of instructions
+  
+    - phase 2: look through all jmp
+  
+      - jmp fixed address solved
+  
+      - computed jmp ?
+  
+        - get help from compiler and validator
+  
           - ```
             jump %eax 
             ==> 
             AND $0xFFFFFFE0, %eax
             jmp %eax     (address is aligned to multiple of 32)
-            ```
-
-          - used in: virtual method calls in C++
-
-          - so put targets @32-byte-aligned address
-
-            - if instruction cross 32-byte-aligned address, fill with no-op.
-
-      - return is turned into jmp.
-
-  - guarding ld/st/jmp (need to avoid writing / jumping RTS)
-
+          ```
+  
+        - used in: virtual method calls in C++
+  
+        - so put targets @32-byte-aligned address
+  
+          - if instruction cross 32-byte-aligned address, fill with no-op.
+  
+    - return is turned into jmp.
+  
+- guarding ld/st/jmp (need to avoid writing / jumping RTS)
+  
     - 64bit x86: instruments a bit more
     - 32bit x86: segmentation
       - segement registers %CS %DS %SS
@@ -445,10 +446,10 @@ Software Isolation
     - RTS return: call tranpoline, using spring board to jump back to module
       - 32-bit+1instr aligned, first instruction is halt 
       - RTS can jump to instruction after halt
-      - module can only halt if jump to spring board.
-
-  - Summary
-
+    - module can only halt if jump to spring board.
+  
+- Summary
+  
     - software isolation, is possible, NaCl is a clever design.
 
 ## Lecture 7: Enclaves
@@ -460,7 +461,7 @@ Isolation, Strong threat model, cutting edge tech
 Tradition:
 
 - OS process
-  ![image-20200816222631280](2020-08-13-044944.assets/image-20200816222631280.png)
+  - ![image-20200816222631280](2020-08-13-044944.assets/image-20200816222631280.png)
 
 Enclave goal
 
@@ -525,14 +526,12 @@ Enclave support
   - attacker steals phone + want to read data
 
   - Assumptions: phone locked, password protected
-
 - Why care?
 
   - customers who must keep secrets
   - ordinary customers
   - competitive adv.
   - Try to do the right thing
-
 - Potential attacks
 
   - exhaustive pw search
@@ -540,6 +539,55 @@ Enclave support
   - removing flash chips
   - bugs in kernel, bugs in driver sw.
   - secure boot 
-
 - hardware overview
+  - ![image-20200817114620610](2020-08-13-044944.assets/image-20200817114620610.png)
+
+- design issures
+  - secure boot
+  - enclave
+  - Data encryption
+- Secure boot (order)
+  - Boot ROM  <-- apple's public key
+  - iboot (check signature  signed by apple's private key)
+  - enclave kernel
+  - before is enclave -------------------------- below is main
+  - UEFI
+  - iOS
+  - app
+- protection against downgrade attack
+  - ![image-20200817121241226](2020-08-13-044944.assets/image-20200817121241226.png)
+
+- Enclave:
+  - manages all keys
+  - limit pw guessing
+  - sensor-to-enclave communication
+    - shared crypto key
+  - protecting user key
+    - userkey = $E_{uid}(E_{uid}(..password))$
+      - many times: takes longer time
+- background apps
+  - idea: key wrapping
+  - take one key, encrypt it with another key
+- File encryption
+  - one key per Filesystem $K_{fs}$
+  - Enclave: $E_{uid}(K_{fs})$
+  - file metadata encrypted using $K_{fs}$
+  - 不是太懂
+  - 4 protection levels
+    - complete
+    - complete unless open
+    - until first auth
+    - no protection
+- how secure is it? Attack surface
+  - Apples private key
+  - read UID
+  - Bugs in iOS
+    - enclave mechanism only protect when phone is locked, not unlocked (user data would be in memory)
+  - Bugs in booting
+
+## Lecture 9: Mobile app security
+
+
+
+
 
