6.NULL add security and cryptography

--- a/notes/2020-08-09-093600.md
+++ b/notes/2020-08-09-093600.md
@@ -375,3 +375,48 @@ semantic versioning:
 - 如果makefile太大了，可能有更好的工具
 - makefile可以作为顶层胶水，画图，测试，调用其他build tool, etc
 
+## Lecture 9: Security and Cryptography
+
+- entropy
+  - $log_2(posibilities)$
+  - coin flip : =1
+  - dice rool  $log_2{6}$
+- **cryptographic** hash functions
+  - sha1(bytes)->160bits
+  - sha1sum (linux工具，用管道输入)
+  - properties
+    - non-invertable
+    - collision resistant
+- 应用
+  - git，防篡改
+  - 镜像下载
+  - commitment scheme (先提交了哈希，避免作弊)
+- key derivation function (KDFs)
+  - 很慢的函数，这样攻击者就很慢
+  - passphrase->KDF->key->用于加密明文
+  - 只需记住passphrase就行
+- symmetric key cryptography
+  - keygen() -> key
+  - encrypt(plaintext, key) -> ciphertext
+  - decrypt(ciphertext, key) -> plaintext
+  - property
+    - given cipher text, cannot figure out plaintext without key.
+    - decrypt(encrypt(m, k), k) = m
+  -   `openssl aes-256-cdc -salt -in 输入文件 -out 输出文件` 加密文件
+  -   `openssl aes-256-cdc -d -in 输入文件 -out 输出文件`  解密文件
+  -   为什么用salt？直接存储明文不完全，存储哈希也不行，因为对手可以预计算hash。同时存储salt和hash(pw + salt)
+- asymmetric key cryptography
+  - keygen() -> (public key, private key)
+    -   public key加密，private key解密
+    -   public key用来上锁，private key用来开锁
+  - signing and verifying
+    -   sign(message, private key) -> signature
+    -   verify(message, sig, public key) -> OK?
+    -   git也可以签名
+  - key distribution
+- hybrid encryption
+  - message (m)
+  - symmetric_keygen()->k
+  - m+k->symmetric encryption -> ciphertext
+  - k+publickey -> asymmetric encryption -> encrypted key
+
