System security add symbolic execution

--- a/notes/2020-08-13-044944.md
+++ b/notes/2020-08-13-044944.md
@@ -375,9 +375,9 @@ Software Isolation
 - NaCl
 
   - broswer
-    
+  
 - ![image-20200816152950089](2020-08-13-044944.assets/image-20200816152950089.png)
-    
+  
 - Sandboxing goals
   
     - don't execute disallowed instructions
@@ -424,14 +424,17 @@ Software Isolation
             ==> 
             AND $0xFFFFFFE0, %eax
             jmp %eax     (address is aligned to multiple of 32)
-          ```
-  
-        - used in: virtual method calls in C++
-  
-        - so put targets @32-byte-aligned address
-  
+            ```
+      ```
+          
+      ```
+      
+    - used in: virtual method calls in C++
+      
+      - so put targets @32-byte-aligned address
+        
           - if instruction cross 32-byte-aligned address, fill with no-op.
-  
+    
     - return is turned into jmp.
   
 - guarding ld/st/jmp (need to avoid writing / jumping RTS)
@@ -587,7 +590,135 @@ Enclave support
 
 ## Lecture 9: Mobile app security
 
+Desktop apps
 
+- files
+- users are principals
+- apps, run with full user privs
+- benefits
+  - sharing is easy
+  - data vs apps, spilted
+
+Web apps
+
+- isolation for apps
+- No file system
+- No sharing
+
+Android app
+
+- binary-> run as a process on linux
+- store files /data/data/appname
+- manifest -> security properties
+- whole thing is signed by developer, an apk file.
+- sharing in android:
+  - messages, called "intent"
+  - app send intent to kernel
+  - reference monitor (special process), kernel send intent to it, reference monitor send to kernel again, kernel send to target.
+  - ![image-20200818143132743](2020-08-13-044944.assets/image-20200818143132743.png)
+- intent:
+  - 组成
+    - name of component, e.g. com.google.Dialer / Component  <= app defines
+    - action field: e.g. DIAL   <= android pre defines
+    - data: e.g. tel 1617...
+  - **component is option**! implicit intent, if multiple answer, popup for user to select.
+- intent permissions: label: string e.g. DIALPERM
+  - ![image-20200818144259787](2020-08-13-044944.assets/image-20200818144259787.png)
+  - perms comes from in app manifest
+    - define new label
+    - request privileges: list labels (require user consent)
+      - 应用如果从别的app那里获取信息，必须通过intent发送消息。
+    - component protection label (那些有label的app可以发消息给该component)
+- Types (permission)
+  - normal permissions (avoiding annoyances)
+  - dangerous -> need prompt
+  - signatures permissions  (only app from the same developer to share stuff, a label that help developers split their app)
+- signature is important: though first fime install don't know public key from who, update is able to verify
+- android's plan: mandatory access control (MAC)
+  - even if code is buggy (not in application code)
+  - analyze
+  - default secure
+  - contract to: Discretionary access control (DAC), force policy on code
+    - apps can set perms
+- android's plan里的特例
+  - RPC between services (android)
+    - RPC comp, 即使有label，别的app有对应label，RPC comp仍然可以检查caller是谁，选择性拒绝。这是一个特殊情况。
+  - broadcast intents
+    - broadcast(intent = SMS_RECEIVED, label = RECEIVE_SMS)
+    - 只发送给有RECEIVE_SMS label的app
+    - RECEIVE_SMS是个dangerous permission
+
+## Lecture 10: Symbolic Execution
+
+Finding bugs
+
+- symbolic execution
+  - difficult to find using fuzzing etc.
+- Bug ~ exploit
+- finding exploit is often hard
+  - encourage security folks to find exploits
+  - learn from exploits
+  - protocol for disclosure (e.g. 2/3 months)
+- approaches to finding bugs
+  - verification: eliminates classes of bugs
+  - testing: 
+    - known bugs
+  - fuzzers: cook up really unusual input
+    - unknown bugs
+    - use symbolic execution to improve
+- setting
+  - ![image-20200818162014035](2020-08-13-044944.assets/image-20200818162014035.png)
+- goal: find deep bugs
+  - ideas: 
+    - compute symbolic values
+    - create path conditions
+    - use solvers to see if a branch is possible (avoid path exploration)
+- Exe Overview:
+  - compile time step:
+    - C to C compiler: instrument it, every branch statement calls to Exe runtime.
+  - Runtime: explore path
+  - Runtime components
+    - ![image-20200818163357553](2020-08-13-044944.assets/image-20200818163357553.png)
+    - scheduler? 深度优先/宽度优先?  深度优先可能陷入loop
+
+Example:
+
+- ![image-20200818162719977](2020-08-13-044944.assets/image-20200818162719977.png)
+
+- variable x, y, pathcondition(pc).
+
+- ![image-20200818164807628](2020-08-13-044944.assets/image-20200818164807628.png)
+
+
+- ![image-20200818164656124](2020-08-13-044944.assets/image-20200818164656124.png)- 
+
+
+Real example: berkeley packet filter.
+
+Lab3, symbolic execution用Z3
+
+将数字作为bitarray，数学运算在bitarray上操作，然后换成boolean问题，用SAT solving
+
+- easy: x+7=y
+- hard: x*x=900
+- tooooo hard: 10=sha256(x)
+
+Arrays
+
+- S[C]  easy (symbolic array, concrete index)
+- C[S] hard (symbolic index, concrete array)
+- *S  hard (symbolic pointer)
+
+They give up floating point, not associative，不满足结合律
+
+Discussion:
+
+- size of execution tree?
+  - really big, but can be done is already impressive
+- how long will exe run? depends.
+- Find all bugs? 
+- how to deal with lib/db/fs?
+  - concolic execution (symbolic + concrete)
 
 
 
