--- a/notes/2020-08-09-093600.md
+++ b/notes/2020-08-09-093600.md
@@ -420,3 +420,20 @@ semantic versioning:
   - m+k->symmetric encryption -> ciphertext
   - k+publickey -> asymmetric encryption -> encrypted key
 
+## Lecture 10: Potpourri
+
+deamon
+
+- running as background process
+
+![image-20200819021531604](2020-08-09-093600.assets/image-20200819021531604.png)
+
+- use cron to run some program with a given frequency
+- print all deamon
+  - systemctl
+
+userspace file system operation
+
+- ![image-20200819023000153](2020-08-09-093600.assets/image-20200819023000153.png)
+- sshfs, looks like a path locally, but actually executed in remote.
+
