--- a/notes/2020-08-09-093600.md
+++ b/notes/2020-08-09-093600.md
@@ -437,3 +437,57 @@ userspace file system operation
 - ![image-20200819023000153](2020-08-09-093600.assets/image-20200819023000153.png)
 - sshfs, looks like a path locally, but actually executed in remote.
 
+intergrate with outside world (api)
+
+- JQ: json query tool
+- pup: ommand Line HTML Parsing
+- 通常 -v   verbose
+- 通常由交互模式 -i
+- destructive tool通常不是recursive
+- 有些工具用 - 表示stdin或out
+  - 通过 -- 表示不要interpret为参数
+- markdown
+- hammerspoon
+  - 写Lua script和系统交互
+- booting from flash drive (USB)
+- virtual machine
+- vagrant
+  - Vagrant is an open-source software product for building and  maintaining portable virtual software development environments
+- jupyter
+
+## Lecture 11: QA
+
+- 学习OS的建议
+  - 6.828
+  - Modern Operating Systems (Andy Tannenbaum)
+  - 可以在线找到一些from scrach 编写kernel的教程
+  - The FreeBSD Operating System
+- 学习使用tool优先级
+  - more keyboard, less mouse
+- python vs bash
+  - bash for automating commands （业务逻辑不在bash里）
+    - short 一次代码
+    - 100行最多了
+    - bash很难写对
+- source script.sh和./script.sh区别
+  - 前者用当前进程运行，后者创建新进程运行
+- which命令查看从哪里找到
+  - /usr/bin，安装的用户程序，包含symlink
+  - /usr/local/bin，用户编译的程序
+  - user/sbin,  only for root
+  - /bin 系统必须的程序
+  - /var  file change over time
+  - /opt  第三方软件，移植到linux？
+-  性能
+  - BPF, eBPF, BPF trace
+- 浏览器插件
+  - Stylus(开源推荐，更改样式) Stylish
+- vim macros要学习
+  - mark，将代码位置标记，然后来回跳跃
+  - ctrl+O, ctrl+I, move forward / back through stack
+  - 可以配置undo history dir
+
+
+
+
+
