--- a/notes/2020-08-13-044944.md
+++ b/notes/2020-08-13-044944.md
@@ -720,5 +720,57 @@ Discussion:
 - how to deal with lib/db/fs?
   - concolic execution (symbolic + concrete)
 
+## Lecture 11: Web Security Model
+
+complexity
+
+- Text, images
+- cookies, js
+- sensitive apps
+- retrofit security
+
+Constraints
+
+- compact
+- many browsers
+- lots of sharing
+
+Threat model
+
+- attacker: own some domain a.com
+- victim: visit a.com
+- victim visit important site
+- +browser trusted, bugfree
+- not network stacks
+
+Same-origin policy
+
+- **https://foo.com:443(implied)**/bar/x.html
+- scripts --> have an origin
+- resource --> have an origin
+- allow script to poke resource if origin is the same
+
+Network
+
+- Identify server? TLS+cert=HTTPS
+- identify client? Cookies 
+
+cookies
+
+- | domain  | key   | value |
+  | ------- | ----- | ----- |
+  | mit.edu | athen | nicko |
+
+- cookie like a session identifier
+
+- cookie security
+
+  - SOP: origin ~ domain (但是也可能domain和origin不一致)
+  - send all matching cookies
+  - who can set cookie?
+  - public suffix (不能设置public suffix的cookie)
+    - a.co.uk不能设置.co.uk
+  - 
+
 
 
